--- a/chenhao.html
+++ b/chenhao.html
@@ -84,7 +84,7 @@
       <div id="u4" class="ax_default box_2">
         <div id="u4_div" class=""></div>
         <div id="u4_text" class="text ">
-          <p><span>环境检测平台</span></p>
+          <p><span>环境监测平台</span></p>
         </div>
       </div>
 
